update slides for w15

--- a/era3/era3_slides_w15.tex
+++ b/era3/era3_slides_w15.tex
@@ -148,9 +148,10 @@ aspectratio=169,    % define the aspect ratio (169, 43)
 		\begin{column}{0.6\textwidth}
 			\begin{itemize}
 				\item Slides gerne mit Kommiliton*innen teilen
-				\item zusätzliches Material (Mitschriften) aus vergangenen Jahren: manche Dinge dieses Jahr nicht relevant!
+				\item zusätzliches Material (Mitschriften) aus vergangenen Jahren:\\manche Dinge dieses Jahr nicht relevant!
 				\item Fehler gerne melden!
 				\item \underline{KEIN UPLOAD} auf Studocu/Studydrive
+				\item zusätzliche Assembly-Aufgaben: \href{https://github.com/ladnik/RISC-V-Assembly-Introductory-Exercises}{github.com/ladnik}
 				\item Slides von Bjarne Hansen: \href{https://home.cit.tum.de/~hbj}{home.in.tum.de/\string~hbj/}
 			\end{itemize}
 		\end{column}
@@ -183,7 +184,7 @@ aspectratio=169,    % define the aspect ratio (169, 43)
 				\item rote oder grüne Stifte, Bleistift
 				\item Tipp-Ex oder wärmeempfindliche Stifte
 				\item Taschenrechner (zählt als Unterschleif!)
-				\item eigene Schmierblätter
+				\item eigene Schmierblätter, zusätzlicher Platz am Ende der Klausur
 				\item irgendwelche Spickzettel -- wir finden die sowieso
 			\end{itemize}
 		\end{column}
@@ -192,11 +193,11 @@ aspectratio=169,    % define the aspect ratio (169, 43)
 
 \begin{frame}[c]{Klausur: Vorbereitung}{}
 	\begin{itemize}
-		\item Übungsblätter rechnen
-		\item Altklausuren rechnen, um Gefühl für Klausurformat und eigene Stärken zu bekommen. Am besten ohne Hilfsmittel/Lösung + Stoppuhr
-		\item Assembly üben! Aufgaben oft sehr einfach
-		\item zusätzliche Assembly-Aufgaben: \href{https://github.com/ladnik/RISC-V-Assembly-Introductory-Exercises}{github.com/ladnik}
-		\item meist ist ERA eine Überhangsklausur: zuerst Aufgaben machen, die ihr gut könnt
+		\item Übungsblätter und Altklausuren rechnen
+		\item Altklausuren am besten ohne Hilfsmittel/Lösung und mit Stoppuhr $\rightarrow$ Gefühl für Klausurformat und eigene Stärken bekommen
+		\item Assembly-Aufgaben $\rightarrow$ Möglichkeit, wenigstens Teilpunkte zu sammeln
+		\item Überhangsklausur $\rightarrow$ zuerst Aufgaben machen, die ihr gut könnt
+		\item Nicht verzweifeln, wenn ihr eine Aufgabe nicht auf Anhieb lösen könnt $\rightarrow$ überspringen und später zurückkehren
 	\end{itemize}
 \end{frame}
 
