minor correction for consistency with sample solution

--- a/era3/era3_slides_w14.tex
+++ b/era3/era3_slides_w14.tex
@@ -353,7 +353,7 @@ aspectratio=169,    % define the aspect ratio (169, 43)
 							\registerpath{3}{3}{7}
 							\registerpath{4}{5}{6}
 							\registerpath{5}{4}{6}
-							\draw[regpath] (7, -2) node[circle, draw, fill, scale=0.4] {} -- (7.5, -2);
+%							\draw[regpath] (7, -2) node[circle, draw, fill, scale=0.4] {} -- (7.5, -2);
 						}
 
 						\only<4>{
